--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
   http: ^1.2.2
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
