--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.2.2
   flutter_riverpod: ^2.5.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
